[package]
name = "qbittorrent"
version = "0.1.0"
authors = ["VanillaBrooks <brookskarlik@gmail.com>"]
edition = "2018"
description = "qbittorrent web api implementation"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = {version = "1.0.104", features= ["serde_derive"]}
serde_json = "1.0.44"
derive_builder = "0.9.0"
reqwest = {version = "0.10.1", features = ["json"]}
tokio = {version=  "0.2.9", features=["macros"]}
serde_urlencoded = "0.6.1"
derive-getters = "0.1.0"
async-trait = "0.1.22"
thiserror = "1.0.11"
