[package]
name = "qbittorrent"
version = "0.1.1"
authors = ["VanillaBrooks <brookskarlik@gmail.com>"]
edition = "2018"
description = "qbittorrent web api implementation"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = { version = "1.0.118", features = ["serde_derive"] }
serde_json = "1.0.61"
derive_builder = "0.9.0"
reqwest = { version = "0.11.0", features = ["json", "cookies"] }
tokio = { version = "1.0.1", features = ["macros", "time"] }
serde_urlencoded = "0.7.0"
derive-getters = "0.2.0"
async-trait = "0.1.42"
thiserror = "1.0.23"
clap = "2.33.3"
base64 = "0.13.0"
percent-encoding = "2.1.0"
anyhow = "1.0.38"
futures = "0.3.9"
