[package]
name = "qbittorrent"
version = "0.1.1"
authors = ["VanillaBrooks <brooks@karlik.org>"]
edition = "2018"
description = "qbittorrent web api implementation"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.104", features= ["derive"] }
serde_json = "1.0.44"
derive_builder = "0.11.2"
reqwest = { version = "0.11.11", features = ["json"] }
serde_urlencoded = "0.7.1"
derive-getters = "0.2.0"
async-trait = "0.1.22"
thiserror = "1.0.11"
tokio = { version=  "1.19.2", features=["macros", "rt"], optional=true }

[dev-dependencies]
tokio = {version=  "1.19.2", features=["macros", "rt"]}

[features]
default = []
tokio = ["dep:tokio"]

[[bin]]
name = "main"
required-features = ["tokio"]
